haproxy/namespace.yaml
apiVersion: v1                      
kind: Namespace
metadata:
  name: multi-cloud-lb
