haproxy/haproxy-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: multi-cloud-lb
  name: multi-cloud-lb-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: multi-cloud-lb
  sessionAffinity: None
  type: ClusterIP
